Prevent overflowing in main view

--- a/src/styles.css
+++ b/src/styles.css
@@ -32,7 +32,7 @@
 }
 
 body {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 #root {
